fix component banner with text to not overflow

--- a/style.css
+++ b/style.css
@@ -34,26 +34,26 @@
         max-width: 42rem;
         margin: auto; } }
 
-.banner-with-text .title {
-  max-width: 54rem; }
-
-.banner-with-text .img-wrap {
-  border-radius: 2rem;
-  margin-top: 4rem; }
-  .banner-with-text .img-wrap img {
-    width: 100%;
-    height: 100%;
-    -o-object-fit: cover;
-       object-fit: cover; }
-
-@media screen and (min-width: 1008px) {
-  .banner-with-text {
-    display: flex;
-    justify-content: space-between;
-    align-items: flex-end; }
-    .banner-with-text .img-wrap {
-      margin-left: 2rem;
-      margin-top: 0; } }
+.banner-with-text {
+  overflow: hidden; }
+  .banner-with-text .title {
+    max-width: 54rem; }
+  .banner-with-text .img-wrap {
+    border-radius: 2rem;
+    margin-top: 4rem; }
+    .banner-with-text .img-wrap img {
+      width: 100%;
+      height: 100%;
+      -o-object-fit: cover;
+         object-fit: cover; }
+  @media screen and (min-width: 1008px) {
+    .banner-with-text {
+      display: flex;
+      justify-content: space-between;
+      align-items: flex-end; }
+      .banner-with-text .img-wrap {
+        margin-left: 2rem;
+        margin-top: 0; } }
 
 * {
   margin: 0px;
@@ -709,11 +709,14 @@ header {
     content: "";
     background-image: url("../assets/particles/particle-left-title.svg");
     top: 0;
-    right: -5rem;
+    right: -4rem;
     width: 18rem;
     height: 100%;
     background-size: 100%;
     background-repeat: no-repeat; }
+    @media screen and (min-width: 641px) {
+      .title-left-particle::after {
+        right: -5rem; } }
 
 .title-center {
   display: flex;
