--- a/styles/banner-with-text.scss
+++ b/styles/banner-with-text.scss
@@ -1,6 +1,7 @@
 @import "../styles/variable.scss";
 
 .banner-with-text {
+    overflow: hidden;
     .title {
         max-width: 54rem;
     }
